5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1764_1185.log
== SUBMITION (2019-05-27 11:06:12) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.166735
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:06:12) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.150241
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:06:13) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.190826
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:06:13) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.17736
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:06:14) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.190987
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:06:14) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.122321
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:06:14) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.129648
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:06:15) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.192931
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:06:15) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.135751
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:13:44) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.145276
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:13:44) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.133297
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 11:13:44) 
-- CODE:
from numpy import*
NG = array(
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.204233
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 4
    n = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:39) 
-- CODE:
from numpy import*
NG = array(eval(input("A:"))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.217004
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:49:40) 
-- CODE:
from numpy import*
NG = array(eval(input("A:"))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.29081
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:54:11) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.177513
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:54:12) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.153661
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:54:13) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.223261
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:54:14) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.135978
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:54:14) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:54:16) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.197255
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:54:17) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.164169
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:04:17) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:04:21) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:04:47) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:04:55) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while ((i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:05:32) 
-- CODE:
from numpy import*
NG = array(eval(input(""))
i = 0
n = 0
while (i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:05:46) 
-- CODE:
from numpy import*
NG = array(eval(input("")))
i = 0
n = 0
while (i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:06:15) 
-- CODE:
from numpy import*
NG = array(eval(input("")))
i = 0
n = 0
while (i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:06:17) 
-- CODE:
from numpy import*
NG = array(eval(input("")))
i = 0
n = 0
while (i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:07:22) 
-- CODE:
from numpy import*
NG = array(eval(input("")))
i = 0
n = 0
while (i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:41:02) 
-- CODE:
from numpy import*
NG = array(eval(input("")))
i = 0
n = 0
while (i < size(NG)):
	if(NG[i] > 99 ):
		print(i)

-- EXECUTION TIME:
945.069
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 08:51:26) 
-- CODE:
from numpy import*

Vetor = array(eval(input("entrada: ")))

i = 0
n = 0

while(i < size(Vetor)):
	if(Vetor[i] > 99):
		print(i)
		n = n +1
	i = i + 1
print(n)


-- EXECUTION TIME:
0.538855
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
